--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="index.pack.js"></script>
+    <script src="./dist/index.pack.js"></script>
   </body>
 </html>
